--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -11,22 +11,22 @@
         <th>이름</th>
         <th>Nickname</th>
         <th>Email</th>
-        <th>권한</th>
+        <th>등급</th>
         <th>게시글 수</th>
-        <th>권한 변경</th>
+        <th>등급 변경</th>
     </tr>
     <th:block th:each="user : ${users}">
         <tr>
             <td th:text="${user.name}"></td>
             <td th:text="${user.nickname}"></td>
             <td th:text="${user.email}"></td>
-            <td th:text="${user.role}"></td>
+            <td th:text="${user.userrole}"></td>
             <td th:text="${user.qtyOfBoard}"></td>
             <td>
-                <form th:action="@{/users/{id}/role(id=${user.id})}" method="post">
-                    <select name="role">
-                        <option value="USER">USER</option>
-                        <option value="ADMIN">ADMIN</option>
+                <form th:action="@{/users/{id}/userrole(id=${user.id})}" method="post">
+                    <select name="userrole">
+                        <option value="NORMAL">NORMAL</option>
+                        <option value="VIP">VIP</option>
                     </select>
                     <button type="submit">Update UserRole</button>
                 </form>
