--- a/src/main/resources/templates/userboard.html
+++ b/src/main/resources/templates/userboard.html
@@ -17,7 +17,7 @@
     <th>작성자</th>
     <th>제목</th>
     <th>작성일시</th>
-    <th>삭제</th>
+    <th>게시글 상태</th>
   </tr>
   </thead>
   <tbody>
@@ -25,6 +25,16 @@
     <td th:text="${board.nickname}"></td>
     <td th:text="${board.title}"></td>
     <td th:text="${board.createdAt}"></td>
+    <td th:text="${board.boardStatus}"></td>
+    <td>
+      <form th:action="@{/userboard/{id}/boardStatus(id=${board.id})}" method="post">
+        <select name="boardStatus">
+          <option value="ENABLED">보이기</option>
+          <option value="DISABLED">숨기기</option>
+        </select>
+        <button type="submit">변경</button>
+      </form>
+    </td>
     <td>
       <form th:action="@{/boardList/__${board.id}__/delete}" method="post" onsubmit="return confirmDelete();">
         <button type="submit">삭제</button>
