feat: 신고 게시판 기능 추가 * 신고 받은 게시글 id, 제목, 등급, 사유 구현 * 이미지 미구현

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,6 +9,7 @@
 <hr>
 <a th:href="@{/users}">회원 목록</a>
 <a th:href="@{/userboard}">게시글 목록</a>
+<a th:href="@{/report}">신고 게시판</a>
 <a th:href="@{'/'}">메인으로 이동</a>
 </body>
 </html>
