--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>유저 리스트</h1>
+<button onclick="sortByBoard()">게시글 수 정렬</button>
+<button onclick="sortByReply()">댓글 수 정렬</button>
 <table>
     <tr>
         <th>이름</th>
@@ -37,5 +39,13 @@
         </tr>
     </th:block>
 </table>
+<script>
+    function sortByBoard() {
+        window.location.href = "/users/orderByBoard";
+    }
+    function sortByReply() {
+        window.location.href = "/users/orderByReply";
+    }
+</script>
 </body>
 </html>
