--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -5,11 +5,9 @@
   <title>신고된 게시글 목록</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <style>
-    .report-box {
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-      padding: 15px;
+    .report-image {
+      width: 200px;
+      height: auto;
     }
   </style>
 </head>
@@ -28,9 +26,7 @@
   <tbody>
   <tr th:each="report : ${reports}">
     <td>
-      <a th:href="@{'file:///' + ${report.filePath}}" target="_blank" class="btn btn-outline-primary">
-        신고 이미지
-      </a>
+      <img th:src="@{'/images' + '?path=' + ${report.filePath}}" class="report-image">
     </td>
     <td th:text="${report.nickname}"></td>
     <td th:text="${report.title}"></td>
